--- a/config/core.entity_form_display.node.icms_news.default.yml
+++ b/config/core.entity_form_display.node.icms_news.default.yml
@@ -2,17 +2,17 @@ langcode: en
 status: true
 dependencies:
   config:
-    - field.field.node.icms_news_article.body
-    - field.field.node.icms_news_article.field_blokkli_comments
-    - field.field.node.icms_news_article.field_icms_paragraphs
-    - field.field.node.icms_news_article.field_icms_teaser_image
-    - field.field.node.icms_news_article.field_icms_teaser_link_label
-    - field.field.node.icms_news_article.field_icms_teaser_pretitle
-    - field.field.node.icms_news_article.field_icms_teaser_text
-    - field.field.node.icms_news_article.field_icms_teaser_title
-    - field.field.node.icms_news_article.field_icms_topics
-    - field.field.node.icms_news_article.field_metatags
-    - node.type.icms_news_article
+    - field.field.node.icms_news.body
+    - field.field.node.icms_news.field_blokkli_comments
+    - field.field.node.icms_news.field_icms_paragraphs
+    - field.field.node.icms_news.field_icms_teaser_image
+    - field.field.node.icms_news.field_icms_teaser_link_label
+    - field.field.node.icms_news.field_icms_teaser_pretitle
+    - field.field.node.icms_news.field_icms_teaser_text
+    - field.field.node.icms_news.field_icms_teaser_title
+    - field.field.node.icms_news.field_icms_topics
+    - field.field.node.icms_news.field_metatags
+    - node.type.icms_news
     - workflows.workflow.editorial
   module:
     - allowed_formats
@@ -120,9 +120,9 @@ third_party_settings:
         formatter: closed
         description: 'Edit the page layout and content using the classic interface.'
         required_fields: true
-id: node.icms_news_article.default
+id: node.icms_news.default
 targetEntityType: node
-bundle: icms_news_article
+bundle: icms_news
 mode: default
 content:
   body:
