--- a/config/field.field.node.icms_news.field_icms_paragraphs.yml
+++ b/config/field.field.node.icms_news.field_icms_paragraphs.yml
@@ -3,7 +3,7 @@ status: true
 dependencies:
   config:
     - field.storage.node.field_icms_paragraphs
-    - node.type.icms_news_article
+    - node.type.icms_news
     - paragraphs.paragraphs_type.icms_layout_2_col_text_elements
     - paragraphs.paragraphs_type.icms_layout_call_to_action
     - paragraphs.paragraphs_type.icms_layout_cards
@@ -32,10 +32,10 @@ dependencies:
 third_party_settings:
   tmgmt_content:
     excluded: false
-id: node.icms_news_article.field_icms_paragraphs
+id: node.icms_news.field_icms_paragraphs
 field_name: field_icms_paragraphs
 entity_type: node
-bundle: icms_news_article
+bundle: icms_news
 label: Content
 description: ''
 required: false
