--- a/config/field.field.node.icms_news.field_icms_teaser_image.yml
+++ b/config/field.field.node.icms_news.field_icms_teaser_image.yml
@@ -4,16 +4,16 @@ dependencies:
   config:
     - field.storage.node.field_icms_teaser_image
     - media.type.image
-    - node.type.icms_news_article
+    - node.type.icms_news
   module:
     - tmgmt_content
 third_party_settings:
   tmgmt_content:
     excluded: false
-id: node.icms_news_article.field_icms_teaser_image
+id: node.icms_news.field_icms_teaser_image
 field_name: field_icms_teaser_image
 entity_type: node
-bundle: icms_news_article
+bundle: icms_news
 label: 'Teaser Image'
 description: "A visually appealing image displayed in the teaser.<br />\r\n<strong>Leave empty to use a default image.</strong><br />\r\n"
 required: false
