--- a/config/field.field.node.icms_news.field_icms_topics.yml
+++ b/config/field.field.node.icms_news.field_icms_topics.yml
@@ -3,17 +3,17 @@ status: true
 dependencies:
   config:
     - field.storage.node.field_icms_topics
-    - node.type.icms_news_article
+    - node.type.icms_news
     - taxonomy.vocabulary.icms_topics
   module:
     - tmgmt_content
 third_party_settings:
   tmgmt_content:
     excluded: false
-id: node.icms_news_article.field_icms_topics
+id: node.icms_news.field_icms_topics
 field_name: field_icms_topics
 entity_type: node
-bundle: icms_news_article
+bundle: icms_news
 label: Topics
 description: 'Use <em>topics</em> to group content by subject and enable filtering across the site.'
 required: true
