--- a/config/node.type.icms_news.yml
+++ b/config/node.type.icms_news.yml
@@ -25,9 +25,9 @@ third_party_settings:
     unpublish_revision: false
   node_title_help_text:
     title_help: "Main title used for the page's meta, menu label and admin display, provided these are not overridden in the corresponding places."
-name: 'News Article'
-type: icms_news_article
-description: 'Use <em>News Articles</em> to create topic-focused posts with custom publishing dates, reading time, taxonomy tags, and ICMS layout components.'
+name: 'News'
+type: icms_news
+description: 'Use <em>News</em> to publish time-sensitive updates with custom publishing dates, taxonomy tags, and ICMS layout components.'
 help: null
 new_revision: true
 preview_mode: 0
