--- a/config/field.field.node.icms_news.field_blokkli_comments.yml
+++ b/config/field.field.node.icms_news.field_blokkli_comments.yml
@@ -3,17 +3,17 @@ status: true
 dependencies:
   config:
     - field.storage.node.field_blokkli_comments
-    - node.type.icms_news_article
+    - node.type.icms_news
   module:
     - comment
     - tmgmt_content
 third_party_settings:
   tmgmt_content:
     excluded: false
-id: node.icms_news_article.field_blokkli_comments
+id: node.icms_news.field_blokkli_comments
 field_name: field_blokkli_comments
 entity_type: node
-bundle: icms_news_article
+bundle: icms_news
 label: Comments
 description: ''
 required: false
