--- a/config/field.field.node.icms_news.field_icms_teaser_pretitle.yml
+++ b/config/field.field.node.icms_news.field_icms_teaser_pretitle.yml
@@ -3,16 +3,16 @@ status: true
 dependencies:
   config:
     - field.storage.node.field_icms_teaser_pretitle
-    - node.type.icms_news_article
+    - node.type.icms_news
   module:
     - tmgmt_content
 third_party_settings:
   tmgmt_content:
     excluded: false
-id: node.icms_news_article.field_icms_teaser_pretitle
+id: node.icms_news.field_icms_teaser_pretitle
 field_name: field_icms_teaser_pretitle
 entity_type: node
-bundle: icms_news_article
+bundle: icms_news
 label: 'Teaser PreTitle'
 description: 'A short line of text above the title that adds context or grabs attention.'
 required: false
