--- a/config/field.field.node.icms_news.field_metatags.yml
+++ b/config/field.field.node.icms_news.field_metatags.yml
@@ -3,17 +3,17 @@ status: true
 dependencies:
   config:
     - field.storage.node.field_metatags
-    - node.type.icms_news_article
+    - node.type.icms_news
   module:
     - metatag
     - tmgmt_content
 third_party_settings:
   tmgmt_content:
     excluded: false
-id: node.icms_news_article.field_metatags
+id: node.icms_news.field_metatags
 field_name: field_metatags
 entity_type: node
-bundle: icms_news_article
+bundle: icms_news
 label: Metatags
 description: ''
 required: false
