--- a/config/language.content_settings.node.icms_news.yml
+++ b/config/language.content_settings.node.icms_news.yml
@@ -2,7 +2,7 @@ langcode: en
 status: true
 dependencies:
   config:
-    - node.type.icms_news_article
+    - node.type.icms_news
   module:
     - content_translation
 third_party_settings:
@@ -10,8 +10,8 @@ third_party_settings:
     enabled: true
     bundle_settings:
       untranslatable_fields_hide: '0'
-id: node.icms_news_article
+id: node.icms_news
 target_entity_type_id: node
-target_bundle: icms_news_article
+target_bundle: icms_news
 default_langcode: site_default
 language_alterable: false
